# qtgql

./: .clangd  .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  RLEASE.md  Release.md  Untitled Diagram.drawio  changelog.md  clang-tidy.yml  compile_commands.json  conanfile.py  conanfile.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  qtgql.kdev4  replace_require_eq_to_check_eq.py  replace_require_eq_to_require_eq.py  sitemap.xml  tmpscript.py
qtgql/bases/: CMakeLists.txt  GraphQLEnum.cpp  GraphQLEnum.hpp  baseqgraphqlobject.cpp  baseqgraphqlobject.hpp  constants.hpp  environment.cpp  environment.hpp  exceptions.hpp  graphqlenum.hpp  graphqlmetadata.hpp  listmodel.hpp  macros.hpp  metadata.hpp  networklayer.hpp  objecttype.hpp  qgraphqllistmodel.hpp  qtgqlconstants.hpp  qtgqlcustomscalar.hpp  qtgqlenvironment.cpp  qtgqlenvironment.hpp  qtgqllistmodel.hpp  qtgqlmetadata.hpp  qtgqlnetworklayer.hpp  qtgqlobjecttype.hpp  qtgqloperationhandler.cpp  qtgqloperationhandler.hpp
qtgql/codegen/cpp/: CMakeLists.txt
qtgql/codegen/cpp/compiler/: builtin_scalars.py  config.py  template.py
qtgql/codegen/cpp/include/: bases.h
qtgql/codegen/cpp/runtime/: CMakeLists.txt  bases.h  custom_scalars.py
qtgql/customscalars/: CMakeLists.txt  basecustomscalar.hpp  customscalars.cpp  implementations.cpp  implementations.hpp  qtgqlcustomscalar.hpp  qtgqlcustomscalars.cpp  qtgqlcustomscalars.hpp
qtgql/gqltransport_cpp/: CMakeLists.txt  core.cpp  core.hpp  gqltransport.cpp  gqltransport.hpp
qtgql/gqlwstransport/: CMakeLists.txt  gqlwstransport.cpp  gqlwstransport.hpp  operationhandler.cpp  operationhandler.hpp
test_cpp/: CMakeLists.txt  test_foo.cpp
test_cpp/FindPackageTest/: main.cpp
tests/: CMakeLists.txt  FindCatch2.cmake  check.cpp  conftest.py  ctest_finder.py  debugableclient.cpp  debugableclient.hpp  doctest.cmake  doctest_finder.py  main.cpp  main.hpp  mini_gql_server.py  qmltester.qml  test_autoproperty.py  test_cpp.py  test_customscalar.cpp  test_docs.py  test_foo.cpp  test_foo2.cpp  test_foobar.cpp  test_listmodel.cpp  test_qproperty.py  test_slot.py  test_typingref.py  testframework.hpp  testutils.cpp  testutils.hpp
tests/FindPackageTest/: CMakeLists.txt
tests/scripts/: run_test_server.py  tests_server.py
tests/test_codegen/: CMakeLists.txt  generate.py  test cli.py  test_app_config.py  test_cli.py  test_config.py  test_introspection.py  testcases.py  utils.py
tests/test_codegen/generated_test_projects/DateTestCase/: qtgqlconfig.py  test_datetestcase.cpp
tests/test_codegen/generated_test_projects/DateTimeTestCase/: qtgqlconfig.py  test_datetimetestcase.cpp
tests/test_codegen/generated_test_projects/DecimalTestCase/: qtgqlconfig.py  test_decimaltestcase.cpp
tests/test_codegen/generated_test_projects/EnumTestCase/: qtgqlconfig.py  test_enumtestcase.cpp
tests/test_codegen/generated_test_projects/FragmentTestCase/: test_fragmenttestcase.cpp
tests/test_codegen/schemas/: __init__.py  custom_scalar_input_schema.py  input_type.py  interface_field.py  interface_with_object_field.py  list_of_input_object.py  list_of_interface.py  list_of_non_node.py  list_of_scalar.py  list_of_scalar_argument.py  list_of_scalar_in_input_object.py  list_of_union.py  mutation_schema.py  nested_input_object.py  node_interface.py  node_interface_field.py  node_union.py  non_node_interface_field.py  non_node_union.py  object_reference_each_other.py  object_with_date.py  object_with_datetime.py  object_with_decimal.py  object_with_enum.py  object_with_interface.py  object_with_list_of_object.py  object_with_list_of_type_with_union.py  object_with_object.py  object_with_optional_object.py  object_with_optional_scalar.py  object_with_scalar.py  object_with_time_scalar.py  object_with_union.py  object_with_user_defined_scalar.py  operation_error.py  operation_variables.py  optional_input_schema.py  partially_initialized_node.py  qml_usage_test.py  recursive_input_object.py  (+10 more)
tests/test_codegen/templates_for_tests/: CMakeLists.jinja.txt  configtemplate.jinja.py  testcase.jinja.cpp  testcase.jinja.hpp
tests/test_codegen/test_cli/: test_cli.py
tests/test_codegen/test_py/: __temp.py  conftest.py  test_base_gql_object.py  test_base_model.py  test_enums.py  test_enums.qml  test_generated_types.py  test_introspection_generator.py  test_object_store.py  test_query_handlers.py  test_query_handlers_gen.py  test_scalars.py  test_simple_class.py  testcases.py
tests/test_compiler/: conftest.py
tests/test_compiler/schemas/: __init__.py
tests/test_compiler/test_py/: __temp.py  conftest.py  test-generate_types_from_schema.py  test_introspection_generator.py  test_simple_class.py
tests/test_cpp/: CMakeLists.txt  main.cpp  main.hpp  test_cpp.py  test_gqlwstransport.cpp  test_gqlwstransport_cpp.py
tests/test_gql/: fixtures.py  mini_gql_server.py  test_client.py  test_handlers.py
tests/test_gqltransport/: conftest.py  test_client.py  test_handlers.py
tests/test_graphqlwstransport/: test_gqlwstransport.cpp
tests/test_itemsystem/: conftest.py  fixtures.py  test_base_type.py  test_core.py  test_define_roles.py  test_no_future_annotations.py
tests/test_itemsystem/test_generic_model/: test_core.py  test_updates.py
tests/test_itemsystem/test_schema/: test_schema.py
tests/test_networklayers/: debughandler.hpp  test_gqltransportws.cpp  test_gqlwstransport.cpp  test_graphql_over_http.cpp  test_subscription_router.cpp  utils.cpp  utils.hpp
tests/test_qgraphqllistmodel/: test_qgraphqllistmodel.cpp
tests/test_qgraphqlobjectstore/: fooobjectwithid.h  test_qgraphqlobjectwithid.cpp
tests/test_qtgqllistmodle/: fooqobject.hpp  test_qgraphqllistmodel.cpp
tests/test_sample_ui/: __temp.py  main.py  models.py
tests/test_sample_ui/graphql/: operations.graphql  schema.graphql
tests/test_sample_ui/qml/: RootRect.qml  TLabel.qml  icons.py  main.qml  main.qml~
tests/test_sample_ui_itemsystem/: main.py
(+454 files in other folders)
