[tool.poetry]
name = "qtgql"
version = "0.104.4"
packages = [{ include = "qtgql" }]
description = "Qt framework for building graphql driven QML applications"
authors = ["Nir <88795475+nrbnlulu@users.noreply.github.com>"]
maintainers = ["Nir.J Benlulu <nrbnlulu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.urls]
"Homepage" = "https://github.com/nrbnlulu/qtgql"
"Documentation" = "https://nrbnlulu.github.io/qtgql/"


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
PySide6 = "^6.4.2"
attrs = "^22.2.0"
# codegen
graphql-core = {version = "^3.2.3", optional=true}
jinja2 = {version = "^3.1.2", optional=true}
typer = {extras = ["all"], version = "^0.7.0", optional=true}
toml = {version = "^0.10.2", optional=true}



[tool.poetry.group.dev.dependencies]
pytest-qt = "^4.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"
strawberry-graphql = ">=0.142.2"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
mypy = "^0.991"
faker = "^15.3.4"
types-toml = "^0.10.8.1"
# doc deps
mkdocs-material = "^9.0.5"
mike = "^1.1.2"
markdown-include = "^0.8.0"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
pygments = "^2.14.0"
mktestdocs = "^0.2.0"



[tool.poetry.extras]
codegen = ["graphql-core", "jinja2", "typer", "toml"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.mypy]
plugins = ['qtgql/ext/mypy_plugin.py']
ignore_missing_imports = "True"
exclude = "(?x)^(.*\\.jinja.py|)$"
warn_no_return = "False"

[tool.black]
line-length = 100
target-version = ['py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycached__
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
select = ["E", "F", "ERA", "I"]
ignore = [
    "TID252",
    "E501",  # line too long, handled by black
]
fix = true
src = ["qtgql", "tests"]

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
addopts = "--cov-config=pyproject.toml --ignore=qtgql/codegen/py/templates/"
markers = [
    "no_captcha: This test requires that `LOGIN_REQUIRE_CAPTCHA=False` on the server",
]
[tool.coverage.run]
omit = ['test_*', 'tests/*', 'qtgql/ext/*', '**/*.jinja.py']
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.qtgql]
config = "tests.test_sample_ui.main:qtgqlconfig"


[tool.autopub]
git-username = "QtGqlBot"
git-email = "bot@no.reply"
project-name = "qtgql"
append-github-contributor = true

[tool.poetry.scripts]
qtgql = "qtgql.codegen.cli:entrypoint"
